upgraded to Java 11